<resources>
    <string name="app_name">Habitoaster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in_using_google">Sign in using google</string>
    <string name="sign_out">Sign out</string>
    <string name="habit_name">Habit name</string>

    <!-- Font -->
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <string name="number_of_days">Number of days</string>
    <string name="habit_hint">e.g: Get up at 5.00 am</string>
    <string name="notifications">Notifications</string>
    <string name="default_notification_time">06.00</string>
    <string name="item_title">Target Today</string>
</resources>
